xml deserializing fix